Bug #58115
check-generated.sh failures for rgw_log_entry
Status:
Pending Backport
Priority:
Normal
Assignee:
-
Target version:
-
% Done:
0%
Source:
Tags:
backport_processed
Backport:
pacific quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Description
**** rgw_log_entry test 2 dump_json check failed **** ceph-dencoder type rgw_log_entry select_test 2 dump_json > /tmp/typ-AW7AEODB3 ceph-dencoder type rgw_log_entry select_test 2 encode decode dump_json > /tmp/typ-0NX4cmLHR 21c21 < "identity_type": 3599295712 --- > "identity_type": 2072560864
Related issues
History
#1 Updated by Casey Bodley 2 months ago
- Status changed from New to Fix Under Review
- Pull request ID set to 49131
#2 Updated by Casey Bodley 2 months ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Backport Bot 2 months ago
- Copied to Backport #58118: quincy: check-generated.sh failures for rgw_log_entry added
#4 Updated by Backport Bot 2 months ago
- Copied to Backport #58119: pacific: check-generated.sh failures for rgw_log_entry added
#5 Updated by Backport Bot 2 months ago
- Tags set to backport_processed