rgw: initialize rgw_log_entry::identity_type

uninitialized identity_type field was causing unit test failures from
check-generated.sh:

**** rgw_log_entry test 2 dump_json check failed ****
   ceph-dencoder type rgw_log_entry select_test 2 dump_json > /tmp/typ-AW7AEODB3
   ceph-dencoder type rgw_log_entry select_test 2 encode decode dump_json > /tmp/typ-0NX4cmLHR
21c21
<     "identity_type": 3599295712
---
>     "identity_type": 2072560864

Fixes: https://tracker.ceph.com/issues/58115

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit cd99af0760bf973d44bacb55767f26ec7a975912)

Conflicts:
	src/rgw/rgw_log.h namespace std